--- a/shared/latex/actors/gafa.tex
+++ b/shared/latex/actors/gafa.tex
@@ -16,24 +16,24 @@
 
 \begin{frame}
   \frametitle{La recherche académique}
-  \imgth[0.85]{citation-nips-2005-2016}
+  \imgth{citation-nips-2005-2016}{0.85}
 \end{frame}
 
 \begin{frame}
   \frametitle{La recherche académique privatisée}
-  \imgth[0.85]{citation-nips-2005-2016-team}
+  \imgth{citation-nips-2005-2016-team}{0.85}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business du machine learning}
   Acteurs de la recherche en machine learning
-  \imgth[0.8]{acquisition-gafa}
+  \imgth{acquisition-gafa}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business}
   IBM et Watson
-  \imgtw[0.6]{jeopardy-watson}
+  \imgtw{jeopardy-watson}{0.6}
 \end{frame}
 
 \begin{frame}
@@ -54,7 +54,7 @@
     \item Chatbots préconfigurés
     \end{itemize}
   \end{minipage}\hfill
-  \imgtw[0.75]{watson-personality-insight}
+  \imgtw{watson-personality-insight}{0.75}
 \end{frame}
 
 \begin{frame}
@@ -72,13 +72,13 @@
 \begin{frame}
   \frametitle{Les acteurs business}
   IBM et Watson
-  \imgtw[1]{ibm-watson-struct}
+  \imgtw{ibm-watson-struct}{1}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business}
   Microsoft Azure
-  \imgtw[1]{ms-azure}
+  \imgtw{ms-azure}{1}
 \end{frame}
 
 \begin{frame}
@@ -86,13 +86,13 @@
   Microsoft Azure
   \newline
   (Déc 2018) supporte scikit-learn, PyTorch et TensorFlow
-  \imgtw[1]{ms-azure2}
+  \imgtw{ms-azure2}{1}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business}
   Amazon
-  \imgtw[0.9]{amazon-ai}
+  \imgtw{amazon-ai}{0.9}
 \end{frame}
 
 \begin{frame}
