--- a/shared/latex/actors/startup.tex
+++ b/shared/latex/actors/startup.tex
@@ -1,16 +1,16 @@
 \begin{frame}
   \frametitle{Tendance}
-  \imgtw{trends-ia-tektonik}
+  \imgtw{trends-ia-tektonik}{1}
 \end{frame}
 
 \begin{frame}
   \frametitle{World Map}
-  \imgtw{ia-landscape-2018}
+  \imgtw{ia-landscape-2018}{1}
 \end{frame}
 
 \begin{frame}
   \frametitle{French Map}
-  \imgtw[1.0]{ia-landscape-fr-2018-2}
+  \imgtw{ia-landscape-fr-2018-2}{1}
 \end{frame}
 
 \begin{frame}
