--- a/shared/latex/auto-encoders/autoencoder.tex
+++ b/shared/latex/auto-encoders/autoencoder.tex
@@ -1,31 +1,31 @@
 \begin{frame}{Schéma général}
-  \imgtw[0.9]{autoencoder-schema}
+  \imgtw{autoencoder-schema}{0.9}
 \end{frame}
 
 \begin{frame}{Cas linéaire}
   Activations linéaires et fonction de perte moindre carrés $\approx$ ACP
 
-  \imgtw[0.6]{pca-nuage}
+  \imgtw{pca-nuage}{0.6}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs profonds}
   Aussi appelées auto-encodeurs empilés.
 
-  \imgtw[0.9]{autoencoder-stacked}
+  \imgtw{autoencoder-stacked}{0.9}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs débruiteurs}
-  \imgtw[0.9]{autoencoder-denoising}
+  \imgtw{autoencoder-denoising}{0.9}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs épars}
-  \imgtw[0.7]{autoencoder-sparse}
+  \imgtw{autoencoder-sparse}{0.7}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs variationnels}
-  \imgtw[0.9]{autoencoder-variational}
+  \imgtw{autoencoder-variational}{0.9}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs LSTM}
-  \imgtw[0.9]{autoencoder-lstm}
+  \imgtw{autoencoder-lstm}{0.9}
 \end{frame}
