--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -1,13 +1,13 @@
 \begin{frame}{Prédiction pour la prévention}
   Grande-Bretagne~: Predpol (abandonné), National Data Analytics Solution (NDAS) en mars 2019.
 
-  \imgtw[0.8]{minorit-report}
+  \imgtw{minorit-report}{0.8}
 \end{frame}
 
 \begin{frame}{Détection de mensonges à la frontière}
   Projet pilote en Hongrie, Lettonie et Grèce (iBorderCtrl).
 
-  \imgtw[0.8]{airport-lie-detection}
+  \imgtw{airport-lie-detection}{0.8}
 \end{frame}
 
 \begin{frame}{Caméras de vidéo-surveillance}
@@ -19,41 +19,41 @@
   \end{itemize}
 
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[1]{chine-orwell}
+    \imgtw{chine-orwell}{1}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[1]{chinese-street-surveillance}
+    \imgtw{chinese-street-surveillance}{1}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}{Reconnaissance faciale}
-  \imgtw[1]{chine-reco-face-fail}
+  \imgtw{chine-reco-face-fail}{1}
 \end{frame}
 
 \begin{frame}{Automatisation du processus de recrutement}
-  \imgtw[0.8]{amazon-ai-favor-men}
+  \imgtw{amazon-ai-favor-men}{0.8}
 \end{frame}
 
 \begin{frame}{Préférence sexuelles à partir d'une photo ?}
-  \imgtw[0.8]{gay-or-not}
+  \imgtw{gay-or-not}{0.8}
 \end{frame}
 
 \begin{frame}{Évaluer une Baby-sitter en fonction de son activité en ligne?}
-  \imgtw[0.8]{baby-sitter-reliable}
+  \imgtw{baby-sitter-reliable}{0.8}
 \end{frame}
 
 \begin{frame}{Traque de la Chine de ses musulmans du Xinjiang}
   Classement automatique en 36 catégories à partir de toutes les données possibles.
 
-  \imgtw[0.8]{chine-musulmans-traque}
+  \imgtw{chine-musulmans-traque}{0.8}
 \end{frame}
 
 \begin{frame}{Génération de texte au niveau humain}
   OpenAI~: GPT-3 est «~trop~» performant pour la génération de texte.
-  \imgtw[0.8]{openai-gpt2-example}
+  \imgtw{openai-gpt2-example}{0.8}
 \end{frame}
 
 \begin{frame}{Les problèmes éthiques}
   Deepfake : «~Zao~»
-  \imgtw[0.8]{zao-deepfake}
+  \imgtw{zao-deepfake}{0.8}
 \end{frame}
