--- a/shared/latex/big-questions/generic.tex
+++ b/shared/latex/big-questions/generic.tex
@@ -11,7 +11,7 @@
 
 \begin{frame}{Données}
   Les \textbf{données} coûtent cher (récolte, nettoyage, \#Data~>~1M). 
-  \imgth[0.5]{amazon-mechanical-turc}
+  \imgth{amazon-mechanical-turc}{0.5}
 \end{frame}
 
 \begin{frame}{Temps long de l'apprentissage}
@@ -22,19 +22,19 @@
     \item Pas de résultats concluants au premier run
   \end{itemize}
   \onslide<+->{$\rightarrow$ Peu de visibilité sur le temps d'obtention d'une plus value
-  \imgth[0.6]{sablier-windows}}
+  \imgth{sablier-windows}{0.6}}
 \end{frame}
 
 \begin{frame}{Infrastructure}
   L'utilisation de GPU/TPU coûte cher… et ça ne s'arrange pas avec l'explosion du besoin par le minage de cryptomonnaies
-  \imgth[0.45]{nvidia-stock-history}
+  \imgth{nvidia-stock-history}{0.45}
   \begin{center}
     \small Cours de l'action NVIDIA
   \end{center}
 \end{frame}
 
 \begin{frame}{Faisabilité}
-  \imgth[0.8]{xkcd-easy-impossible}
+  \imgth{xkcd-easy-impossible}{0.8}
 \end{frame}
 
 \begin{frame}{Recrutement}
@@ -49,18 +49,18 @@
     ~
   \end{minipage}\hfill
   \begin{minipage}[l]{0.44\linewidth}
-    \imgth[0.35]{data-scientist-star}
+    \imgth{data-scientist-star}{0.35}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}{Acceptation}
   Utilisateurs prêts à accepter un algorithme qui fait des erreurs ?
-  \imgth[0.7]{robotdoc}
+  \imgth{robotdoc}{0.7}
 \end{frame}
 
 \begin{frame}{Acceptation}
   Utilisateurs prêts à accepter un algorithme qui fait des erreurs ?
-  \imgth[0.65]{google-ceo-congress}
+  \imgth{google-ceo-congress}{0.65}
 \end{frame}
 
 \begin{frame}{Interprétabilité}
@@ -68,5 +68,5 @@
 
   Réseaux de neurones $\iff$ enchaînement de multiplications matricielles avec des millions de paramètres.
 
-  \imgtw[0.9]{deep-auto-encoder}
+  \imgtw{deep-auto-encoder}{0.9}
 \end{frame}
