--- a/shared/latex/engineering/engineering-practices.tex
+++ b/shared/latex/engineering/engineering-practices.tex
@@ -1,9 +1,9 @@
 \begin{frame}{Pipeline d'un projet de Machine Learning}
-  \imgtw[0.8]{ml-craftmanship}
+  \imgtw{ml-craftmanship}{0.8}
 \end{frame}
 
 \begin{frame}{Complexification des solutions : retours dégressifs}
-  \imgtw[0.8]{ml-effort-vs-value}
+  \imgtw{ml-effort-vs-value}{0.8}
 \end{frame}
 
 \begin{frame}{Caractéristiques et buts différents}
