--- a/shared/latex/intelligence-artificielle/historique.tex
+++ b/shared/latex/intelligence-artificielle/historique.tex
@@ -1,79 +1,79 @@
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{XVIème} : Le mythe du Golem
-  \imgtw{mythe-du-golem}
+  \imgtw{mythe-du-golem}{1}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1913} : Chaînes de Markov
-  \imgth[0.8]{markov}
+  \imgth{markov}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1950} : Alan Turing
-  \imgth[0.6]{alan-turing}
+  \imgth{alan-turing}{0.6}
   précurseur de l'informatique, test de Turing
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1957} : Le Perceptron de Rosenblatt
-  \imgth[0.6]{perceptron}
+  \imgth{perceptron}{0.6}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1972} :  TF-IDF
-  \imgtw{tf-idf}
+  \imgtw{tf-idf}{1}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1986} : Rétropopagation du gradient de l'erreur (popularisation)
-  \imgth[0.6]{backpropagation}
+  \imgth{backpropagation}{0.6}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1990} : \textbf{Lenet} de Lecun : premier résau de convolution (\textbf{CNN})
-  \imgtw[1]{cnn-schema}
+  \imgtw{cnn-schema}{1}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1995} : Machine à vecteurs support de Vapnik (\textbf{SVM})
-  \imgth[0.6]{svm-schema}
+  \imgth{svm-schema}{0.6}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1997} : Deep Blue bat Kasparov
-  \imgtw[0.8]{deepblue-kasparov}
+  \imgtw{deepblue-kasparov}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{2011} : IBM-Watson
-  \imgtw[0.6]{jeopardy-watson}
+  \imgtw{jeopardy-watson}{0.6}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{2012} : Le ``neurone du chat'' dans un \textbf{CNN}
-  \imgtw[0.6]{googlebrain}
+  \imgtw{googlebrain}{0.6}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{2016} : AlphaGo vs Lee Sedol
-  \imgtw[0.6]{alphago-sedol}
+  \imgtw{alphago-sedol}{0.6}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{2019} : Pluribus vs Pro (Chris Ferguson, Darren Elias,...)
-  \imgtw[0.6]{poker-bots}
+  \imgtw{poker-bots}{0.6}
 \end{frame}
 
