--- a/shared/latex/machine-learning/data-preparation.tex
+++ b/shared/latex/machine-learning/data-preparation.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Introduction}
-  \imgtw[0.8]{ml-craftmanship}
+  \imgtw{ml-craftmanship}{0.8}
 \end{frame}
 
 
@@ -187,15 +187,15 @@
 \end{frame}
 
 \begin{frame}{Outils — count plot}
-  \imgtw{countplot}
+  \imgtw{countplot}{1}
 \end{frame}
 
 \begin{frame}{Outils — dist plot}
-  \imgtw{distplot}
+  \imgtw{distplot}{1}
 \end{frame}
 
 \begin{frame}{Outils — qq plot}
-  \imgtw{qqplot}
+  \imgtw{qqplot}{1}
   Attention, pas \bluelink{https://seaborn.pydata.org/}{\texttt{seaborn}}
   mais
   \bluelink{http://www.statsmodels.org/stable/index.html}{\texttt{statsmodel}}
@@ -204,23 +204,23 @@
 \end{frame}
 
 \begin{frame}{Outils — bar plot}
-  \imgtw{barplot}
+  \imgtw{barplot}{1}
 \end{frame}
 
 \begin{frame}{Outils — scatter plot}
-  \imgtw[.7]{scatter}
+  \imgtw{scatter}{.7}
 \end{frame}
 
 \begin{frame}{Outils — violin plot}
-  \imgtw{violinplot}
+  \imgtw{violinplot}{1}
 \end{frame}
 
 \begin{frame}{Outils — pair plot}
-  \imgtw[.65]{pairplot}
+  \imgtw{pairplot}{.65}
 \end{frame}
 
 \begin{frame}{Outils — correlation matrix}
-  \imgtw[.8]{corrmat}
+  \imgtw{corrmat}{.8}
 \end{frame}
 
 \begin{frame}{Mode opératoire}
