--- a/shared/latex/machine-learning/evaluation.tex
+++ b/shared/latex/machine-learning/evaluation.tex
@@ -17,20 +17,20 @@
 
 \begin{frame}
   \frametitle{Précision, rappel}
-  \imgth[0.8]{precisionrecall}
+  \imgth{precisionrecall}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Courbe ROC}
-  \imgtw[.6]{roc}
+  \imgtw{roc}{.6}
 \end{frame}
 
 \begin{frame}
   \frametitle{Analyse d'une courbe ROC}
-  \imgtw[.6]{roc-space}
+  \imgtw{roc-space}{.6}
 \end{frame}
 
 \begin{frame}
   \frametitle{Matrice de confusion}
-  \imgtw[.6]{confusion-matrix}
+  \imgtw{confusion-matrix}{.6}
 \end{frame}
