--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -1,9 +1,9 @@
 \begin{frame}{Un domaine vaste}
-  \imgtw{data-science}
+  \imgtw{data-science}{1}
 \end{frame}
 
 \begin{frame}{Hiérarchie des noms}
-  \imgth[0.8]{ia-ml-deep}
+  \imgth{ia-ml-deep}{0.8}
 \end{frame}
 
 \begin{frame}{Machine Learning}
@@ -15,11 +15,11 @@
 \end{frame}
 
 \begin{frame}{Ingénierie}
-  \imgtw[0.8]{ml-craftmanship}
+  \imgtw{ml-craftmanship}{0.8}
 \end{frame}
 
 \begin{frame}{Matière première : les données}
-  \imgtw[0.8]{variables}
+  \imgtw{variables}{0.8}
 \end{frame}
 
 \begin{frame}{Grandes familles}
@@ -43,40 +43,40 @@
   Apprendre une \textbf{stratégie} efficace dans un \textbf{univers} où les \textbf{actions} fournissent des \textbf{récompenses} (possiblement négatives)
   \vfill
   \begin{minipage}[l]{0.39\linewidth}
-    \imgtw[0.8]{echec}
+    \imgtw{echec}{0.8}
   \end{minipage}
   \begin{minipage}[l]{0.59\linewidth}
-    \imgtw[0.75]{darpa-urban-challenge}
+    \imgtw{darpa-urban-challenge}{0.75}
   \end{minipage}
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire}
   Prédire une valeur en fonction d'une autre
 
-  \imgth[0.7]{regression-line-1}
+  \imgth{regression-line-1}{0.7}
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire multiple}
   Prédire une valeur en fonction de plusieurs autres
 
-  \imgth[0.8]{regression-hyperplan}
+  \imgth{regression-hyperplan}{0.8}
 \end{frame}
 
 \begin{frame}{Exemple --- Classification avec des réseaux à convolutions}
   
-  \imgtw{cnn-schema}
+  \img{cnn-schema}
 \end{frame}
 
 \begin{frame}{Exemple --- Classification avec des réseaux à convolutions}
-  \imgtw[0.8]{caltech256}
+  \imgtw{caltech256}{0.8}
 \end{frame}
 
 \begin{frame}{Exemple --- Apprentissage par renforcement}
-  \imgtw[0.8]{alphazero}
+  \imgtw{alphazero}{0.8}
 \end{frame}
 
 \begin{frame}{Topologie du domaine}
-  \imgtw[0.8]{ml-illustration}
+  \imgtw{ml-illustration}{0.8}
 \end{frame}
 
 \begin{frame}{Points de vue}
