--- a/shared/latex/machine-learning/math-algebre-lineaire.tex
+++ b/shared/latex/machine-learning/math-algebre-lineaire.tex
@@ -92,7 +92,7 @@ def weights(x, y):
 \begin{frame}
   \frametitle{Application d'une transformation linéaire à un exemple}
 
-  \imgtw[.7]{linear-algebra}
+  \imgtw{linear-algebra}{.7}
 
   Bonne intuition à garder : Verser les colonnes (les exemples du
   dataset) dans les lignes (les opérations).
@@ -101,7 +101,7 @@ def weights(x, y):
 \begin{frame}
   \frametitle{Bonne intuition à garder}
 
-  \imgtw[.7]{linear-algebra-run}
+  \imgtw{linear-algebra-run}{.7}
   Bonne intuition à garder : Verser les colonnes (les exemples du
   dataset) dans les lignes (les opérations).
 \end{frame}
@@ -253,13 +253,13 @@ res = [[t(x, y) for x, y
 \begin{frame}
   \frametitle{Bonne intuition à garder}
 
-  \imgtw{linear-algebra}
+  \imgtw{linear-algebra}{1}
 \end{frame}
 
 \begin{frame}
   \frametitle{Bonne intuition à garder}
 
-  \imgtw{linear-algebra-run}
+  \imgtw{linear-algebra-run}{1}
 \end{frame}
 
 \begin{frame}
@@ -280,7 +280,7 @@ res = [[t(x, y) for x, y
 \begin{frame}
   \frametitle{Exemple de transformation}
 
-  \imgtw[.5]{linear-transformation}
+  \imgtw{linear-transformation}{.5}
   \[
     \begin{aligned}
       \text{Bleu} & = \text{Transformation} \times \text{Rouge} \\
@@ -303,7 +303,7 @@ res = [[t(x, y) for x, y
 \begin{frame}
   \frametitle{Vecteur propre}
 
-  \imgtw[.5]{linear-transformation}
+  \imgtw{linear-transformation}{.5}
 
   Vecteur partant de l'origine qui conserve sa direction malgré la transformation.
 
@@ -314,7 +314,7 @@ res = [[t(x, y) for x, y
 \begin{frame}
   \frametitle{Valeur propre}
 
-  \imgtw[.5]{linear-transformation}
+  \imgtw{linear-transformation}{.5}
 
   Facteur par lequel un vecteur propre est redimensionné.
 
