--- a/shared/latex/machine-learning/math-analyse.tex
+++ b/shared/latex/machine-learning/math-analyse.tex
@@ -18,7 +18,7 @@
 \begin{frame}
   \frametitle{Pente positive}
 
-  \imgtw[.8]{positive-slope}
+  \imgtw{positive-slope}{.8}
 
   Opposé de la pente = $-2$. Avec un pas de $0,1$, on passe de $1$ à $0,8$.
 \end{frame}
@@ -26,7 +26,7 @@
 \begin{frame}
   \frametitle{Pente négative}
 
-  \imgtw[.8]{negative-slope}
+  \imgtw{negative-slope}{.8}
 
   Opposé de la pente = $2$. Avec un pas de $0,1$, on passe de $-1$ à $-0,8$.
 \end{frame}
@@ -34,5 +34,5 @@
 \begin{frame}
   \frametitle{Exemple en 2 dimensions}
   dérivée → gradient
-  \imgth[.8]{gradient-descent}
+  \imgth{gradient-descent}{.8}
 \end{frame}
