--- a/shared/latex/machine-learning/math-proba.tex
+++ b/shared/latex/machine-learning/math-proba.tex
@@ -34,7 +34,7 @@
       \end{itemize}
     \end{column}
     \begin{column}{.5\textwidth}
-      \imgtw{normal}
+      \imgtw{normal}{1}
     \end{column}
   \end{columns}
 \end{frame}
