--- a/shared/latex/natural-language-processing/preprocessing.tex
+++ b/shared/latex/natural-language-processing/preprocessing.tex
@@ -26,15 +26,15 @@
 \end{frame}
 
 \begin{frame}{Étiquetage morpho-syntaxique}
-  \imgtw[0.8]{pos-tagging}
+  \imgtw{pos-tagging}{0.8}
 \end{frame}
 
 \begin{frame}{Reconnaissance d'entités nommées}
-  \imgtw[0.8]{named-entity-recognition}
+  \imgtw{named-entity-recognition}{0.8}
 \end{frame}
 
 \begin{frame}{Analyse syntaxique}
-  \imgtw[0.8]{parse-tree}
+  \imgtw{parse-tree}{0.8}
 \end{frame}
 
 \begin{frame}{Lemmatisation}
@@ -53,22 +53,22 @@
 
 \begin{frame}
   \frametitle{Outlis --- WordNet}
-  \imgth[0.7]{wordnet-1}  
+  \imgth{wordnet-1}{0.7}  
   Projet sur le français : WOLF (Wordnet Libre du Français) 
 \end{frame}
 
 \begin{frame}
   \frametitle{Outils --- DBpedia}
-  \imgtw[0.9]{dbpedia}
+  \imgtw{dbpedia}{0.9}
 \end{frame}
 
 \fmg{\begin{frame}
   \frametitle{Utilisation actuelle}
-  \imgtw[0.9]{chatbot}
+  \imgtw{chatbot}{0.9}
 \end{frame}}
 
 \fmg{\begin{frame}
   \frametitle{Maintenabilité}
-  \imgtw[0.9]{usine-a-gaz}
+  \imgtw{usine-a-gaz}{0.9}
 \end{frame}}
 
