--- a/shared/latex/natural-language-processing/similarity-text.tex
+++ b/shared/latex/natural-language-processing/similarity-text.tex
@@ -49,5 +49,5 @@
 
 \begin{frame}
   \frametitle{Produit Scalaire sur TF-IDF}
-  \imgtw[0.9]{cosinus-similarity}
+  \imgtw{cosinus-similarity}{0.9}
 \end{frame}
