--- a/shared/latex/neural-networks/attention-model.tex
+++ b/shared/latex/neural-networks/attention-model.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Modèle à attention}
   Modèle à attention pour la traduction
-  \imgth[0.8]{attention-model}
+  \imgth{attention-model}{0.8}
   \begin{center}
     \bluelink{https://demo.allennlp.org/reading-comprehension}{Démo modèle à attention}
   \end{center}
