--- a/shared/latex/neural-networks/cnn-data.tex
+++ b/shared/latex/neural-networks/cnn-data.tex
@@ -1,39 +1,39 @@
 \begin{frame}{MNIST}
   810k caractères manuscrits
-  \imgth[0.6]{mnist}
+  \imgth{mnist}{0.6}
 \end{frame}
 
 \begin{frame}{Caltech 256}
   300k objets/animaux/personnes
-  \imgth[0.7]{caltech256}
+  \imgth{caltech256}{0.7}
 \end{frame}
 
 \begin{frame}{Street View House Numbers}
   600k numéros annotés
-  \imgth[0.7]{streetviewdataset}
+  \imgth{streetviewdataset}{0.7}
 \end{frame}
 
 \begin{frame}{ImageNet}
   ~12M images annotés par synset de wordnet
-  \imgth[0.7]{imagenet}
+  \imgth{imagenet}{0.7}
 \end{frame}
 
 \begin{frame}{MS-COCO}
    330k images avec annotation+segmentation
-  \imgtw{ms-coco}
+  \imgtw{ms-coco}{1}
 \end{frame}
 
 \begin{frame}{VisualQA}
   265k images, Question answering
-  \imgth[0.7]{visual-qa}
+  \imgth{visual-qa}{0.7}
 \end{frame}
 
 \begin{frame}{Open Images}
   9M images annotées avec 6000 catégories
-  \imgth[0.7]{openimage}
+  \imgth{openimage}{0.7}
 \end{frame}
 
 \begin{frame}{MS-Celeb-1M}
   10M photos de 100k célebrités
-  \imgth[0.7]{ms-celeb}
+  \imgth{ms-celeb}{0.7}
 \end{frame}
