--- a/shared/latex/neural-networks/gan-model.tex
+++ b/shared/latex/neural-networks/gan-model.tex
@@ -1,12 +1,12 @@
 \begin{frame}{Génération de visages}
-  \imgth[0.8]{gan-faux-visages}
+  \imgth{gan-faux-visages}{0.8}
 \end{frame}
 
 \begin{frame}{Génération Zèbre $\iff$ Cheval}
-  \imgth[0.8]{cyclegan}
+  \imgth{cyclegan}{0.8}
 \end{frame}
 
 \begin{frame}{Schéma des Generative Adverserial Networks}
   Le générateur n'a jamais vu les vraies données !
-  \imgtw[0.8]{gan-schema}
+  \imgtw{gan-schema}{0.8}
 \end{frame}
