--- a/shared/latex/neural-networks/intro.tex
+++ b/shared/latex/neural-networks/intro.tex
@@ -1,21 +1,21 @@
 \begin{frame}{Lien avec la régression linéaire}
-  \imgtw[0.9]{regression-10}
+  \imgtw{regression-10}{0.9}
 \end{frame}
 
 \begin{frame}{Lien avec la régression linéaire}
-  \imgtw[0.9]{separable-problem-linear-solution}
+  \imgtw{separable-problem-linear-solution}{0.9}
 \end{frame}
 
 \begin{frame}{Lien avec la régression linéaire}
-  \imgtw[0.9]{xor}
+  \imgtw{xor}{0.9}
 \end{frame}
 
 \begin{frame}{Lien (ténu) avec la biologie}
-  \imgtw[0.9][Diagram of a Neuron, Wikimedia Commons User:Dhp1080, CC BY-SA 3.0]{biological-neuron}
+  \imgtw[Diagram of a Neuron, Wikimedia Commons User:Dhp1080, CC BY-SA 3.]{biological-neuron}{0.9}
 \end{frame}
 
 \begin{frame}{Modélisation d'un neurone}
-  \imgtw[0.9]{neuron-model}
+  \imgtw{neuron-model}{0.9}
 \end{frame}
 
 \begin{frame}{Modélisation d'un réseau de neurones}
@@ -36,22 +36,22 @@
 
 \begin{frame}{Réseau sans couche cachée}
   \centering
-  \imgtw{neural-networks/shallow-ff}
+  \imgtw{neural-networks/shallow-ff}{1}
 \end{frame}
 
 \begin{frame}{Réseau avec une couche cachée}
   \centering
-  \imgtw{neural-networks/one-hidden-layer-ff}
+  \imgtw{neural-networks/one-hidden-layer-ff}{1}
 \end{frame}
 
 \begin{frame}{Réseau profond}
   \centering
-  \imgtw{neural-networks/deep-ff}
+  \imgtw{neural-networks/deep-ff}{1}
 \end{frame}
 
 \begin{frame}{Un potentiel infini}
   \textbf{Kurt Hornik, 1991~:} Théorème d'approximation universelle
-  \imgtw[0.8]{universal-approximation}
+  \imgtw{universal-approximation}{0.8}
 \end{frame}
 
 \begin{frame}{Démonstration}
@@ -148,7 +148,7 @@
 
 \begin{frame}{Fonctions d'activation --- Sigmoïde}
   \begin{center}
-    \imgtw{activations/sigmoid}
+    \imgtw{activations/sigmoid}{1}
   \end{center}
 
   \begin{description}[<+->]
@@ -159,7 +159,7 @@
 
 \begin{frame}{Fonctions d'activation --- Tangente hyperbolique}
   \begin{center}
-    \imgtw{activations/tanh}
+    \imgtw{activations/tanh}{1}
   \end{center}
 
   \begin{description}[<+->]
@@ -170,7 +170,7 @@
 
 \begin{frame}{Fonctions d'activation --- ReLU}
   \begin{center}
-    \imgtw[0.6]{activations/relu}
+    \imgtw{activations/relu}{0.6}
   \end{center}
 
   \begin{description}[<+->]
@@ -181,7 +181,7 @@
 
 \begin{frame}{Fonctions d'activation --- Approximation d'une fonction}
   \centering
-    \imgtw{activations/approximation}
+    \imgtw{activations/approximation}{1}
   {\small
     \begin{align*}
       n_1 & = \ReLU(-5x - 7.7) & n_4 & = \ReLU(1.2x - 0.2) \\
