--- a/shared/latex/neural-networks/regularisation.tex
+++ b/shared/latex/neural-networks/regularisation.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Sur-apprentissage (et sous-apprentissage)}
-  \imgtw[0.6]{over-underfitting}
+  \imgtw{over-underfitting}{0.6}
 \end{frame}
 
 \begin{frame}{Par la pénalisation de l'utilisation des paramètres}
@@ -14,21 +14,21 @@
 \end{frame}
 
 \begin{frame}{Par early stopping}
-  \imgtw[0.6]{early-stopping}
+  \imgtw{early-stopping}{0.6}
 \end{frame}
 
 \begin{frame}{Par augmentation/bruitage des données}
-  \imgtw[0.8]{data-augmentation}
+  \imgtw{data-augmentation}{0.8}
 \end{frame}
 
 \begin{frame}{Par dropout}
-  \imgtw[0.8]{dropout-2}
+  \imgtw{dropout-2}{0.8}
 \end{frame}
 
 \begin{frame}{En entraînant sur plusieurs tâches}
-  \imgtw[0.8]{multi-task-v2}
+  \imgtw{multi-task-v2}{0.8}
 \end{frame}
 
 \begin{frame}{En opposant des réseaux de neurones}
-  \imgtw[0.8]{gan-schema}
+  \imgtw{gan-schema}{0.8}
 \end{frame}
