--- a/shared/latex/recommander-system/intro.tex
+++ b/shared/latex/recommander-system/intro.tex
@@ -8,13 +8,13 @@
 \begin{frame}
   \frametitle{Exemples}
   \begin{minipage}[l]{0.33\linewidth}
-    \imgtw[1]{google-ads_logo}
+    \imgtw{google-ads_logo}{1}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.33\linewidth}
-    \imgtw[1]{amazon_logo}
+    \imgtw{amazon_logo}{1}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.33\linewidth}
-    \imgtw[1]{netflix_logo}
+    \imgtw{netflix_logo}{1}
   \end{minipage}\hfill
 \end{frame}
 
