--- a/shared/latex/reinforcement-learning/alphago.tex
+++ b/shared/latex/reinforcement-learning/alphago.tex
@@ -10,7 +10,7 @@
 
 \begin{frame}{Go}
   \begin{minipage}[c]{0.6\linewidth}
-    \imgtw[1]{go-regles}
+    \imgtw{go-regles}{1}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.33\linewidth}
     \begin{center}
@@ -34,13 +34,13 @@
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.31\linewidth}
-  \imgtw{alphago-value}
+  \imgtw{alphago-value}{1}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}{Réseau de policy}
   \begin{minipage}[c]{0.50\linewidth}
-    \imgth[0.8]{alphago-policy}
+    \imgth{alphago-policy}{0.8}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
     \begin{itemize}[<+->]
@@ -52,7 +52,7 @@
 \end{frame}
 
 \begin{frame}{Monte-Carlo Tree Search + réseaux de value \& policy}
-  \imgtw[0.8]{alphago-mcts}
+  \imgtw{alphago-mcts}{0.8}
   \begin{itemize}[<+->]
     \item Sélection par maximum de Q-value + u(P) où P est une proba à priori pour chaque coup
     \item Expansion en fonction de la policy qui produit des probabilités stockées pour chaque action
@@ -75,7 +75,7 @@
 
 \begin{frame}{Évaluation de performances au Go}
   \begin{minipage}[c]{0.7\linewidth}
-    \imgtw[1]{go-winrate-dan}
+    \imgtw{go-winrate-dan}{1}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.26\linewidth}
     \begin{adjustbox}{scale=0.8}
@@ -129,7 +129,7 @@
     \item[Plus fort] Bat alphago 100:0
     \item[Plus général] Pas de supervisé : renforcement par self-play seulement
   \end{description}
-  \onslide<+->{\imgtw[1]{alphagozero-lerningcurve}}
+  \onslide<+->{\imgtw{alphagozero-lerningcurve}{1}}
 \end{frame}
 
 \begin{frame}{Alpha Zero}
