--- a/shared/latex/reinforcement-learning/deep.tex
+++ b/shared/latex/reinforcement-learning/deep.tex
@@ -4,7 +4,7 @@
   \item 210x160 pixels
   \item 8 à 16 actions
   \end{itemize}
-  \imgtw[0.6]{atari}
+  \imgtw{atari}{0.6}
 \end{frame}
 
 \begin{frame}{DQN --- Détails techniques}
