--- a/shared/latex/sectors/intro.tex
+++ b/shared/latex/sectors/intro.tex
@@ -12,10 +12,10 @@
   \end{center}
   $\;$ \\
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{biological-neuron}
+    \imgtw{biological-neuron}{1}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{neuron-model}
+    \imgtw{neuron-model}{1}
   \end{minipage}\hfill
 \end{frame}
 
@@ -54,5 +54,5 @@
 \begin{frame}
   \frametitle{Les secteurs impactés}
   Journalisme
-  \imgtw[0.8]{jt-chine}
+  \imgtw{jt-chine}{0.8}
 \end{frame}
