--- a/shared/latex/sectors/sante.tex
+++ b/shared/latex/sectors/sante.tex
@@ -10,13 +10,13 @@
 
 \begin{frame}
   \frametitle{Médecine et machine learning}
-  \imgtw[0.9]{esante-landscape}
+  \imgtw{esante-landscape}{0.9}
 \end{frame}
 
 \begin{frame}
   \frametitle{Diagnostique}
   Analyse d'image, d'ECG, données génomiques et phénotypiques
-  \imgtw[0.8]{esante-solutions}
+  \imgtw{esante-solutions}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -35,7 +35,7 @@
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.34\linewidth}
-    \imgtw[0.8]{oeil-coupe}
+    \imgtw{oeil-coupe}{0.8}
   \end{minipage}\hfill
 \end{frame}
 
@@ -75,7 +75,7 @@
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[0.8]{adn-data}
+    \imgtw{adn-data}{0.8}
   \end{minipage}\hfill
 \end{frame}
 
@@ -85,10 +85,10 @@
   \newline
   \newline
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[0.8]{adn-big-data}
+    \imgtw{adn-big-data}{0.8}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[0.8]{big-data-documents}
+    \imgtw{big-data-documents}{0.8}
   \end{minipage}\hfill
 \end{frame}
 
@@ -96,13 +96,13 @@
 \begin{frame}
   \frametitle{Thérapie}
   Découverte de molécules (ReLeaSe, ...) 
-  \imgtw[0.8]{molecule-release}
+  \imgtw{molecule-release}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Thérapie}
   Modélisation de molécules (DeepMind)
-  \imgtw[0.8]{foldit}
+  \imgtw{foldit}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -111,24 +111,24 @@
     Simulation biologiques de l'effet de médicaments (IKTOS, Atomwise, ...)
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[0.8]{iktos-drug-design}
+    \imgtw{iktos-drug-design}{0.8}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}
   \frametitle{Thérapie}
   Robo-chirurgien (Smart Tissue Autonomous Robot)
-  \imgth[0.8]{robot-chirurgien}
+  \imgth{robot-chirurgien}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Thérapie}
   Mécanisme de contrôle de prothèses bioniques
-  \imgtw[0.8]{bras-bioniques}
+  \imgtw{bras-bioniques}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Thérapie}
   Lunettes pour aveugles (Panda guide, OrCam Technologies)
-  \imgtw[0.8]{lunettes-pour-aveugle}
+  \imgtw{lunettes-pour-aveugle}{0.8}
 \end{frame}
