--- a/shared/latex/sequential-data/hmm.tex
+++ b/shared/latex/sequential-data/hmm.tex
@@ -3,7 +3,7 @@
 
   Par exemple : diagnostic, capteur bruité, bourse, achats clients
 
-  \imgth[0.6]{hmm-model-weather}
+  \imgth{hmm-model-weather}{0.6}
 \end{frame}
 
 \begin{frame}{Définition}
