--- a/shared/latex/supervised/bayes-networks.tex
+++ b/shared/latex/supervised/bayes-networks.tex
@@ -1,7 +1,7 @@
 \begin{frame}
   \frametitle{Réseaux Bayésiens}
   Graphe orienté acyclique
-  \imgth[0.6]{bayesian-net}
+  \imgth{bayesian-net}{0.6}
 \end{frame}
 
 \begin{frame}
@@ -30,5 +30,5 @@
   \item Détection d'anomalie
   \item ...
   \end{itemize}
-  \imgth[0.5]{graph-oriented}
+  \imgth{graph-oriented}{0.5}
 \end{frame}
