--- a/shared/latex/supervised/gaussian-mixture.tex
+++ b/shared/latex/supervised/gaussian-mixture.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Mixture de Gaussiennes}
-  \imgtw[0.8]{gaussian-mixture-univariate}
+  \imgtw{gaussian-mixture-univariate}{0.8}
 \end{frame}
 
 \begin{frame}
