--- a/shared/latex/supervised/gradient-boosting.tex
+++ b/shared/latex/supervised/gradient-boosting.tex
@@ -1,7 +1,7 @@
 \begin{frame}
   \frametitle{Introduction}
   Arbres qui s'améliorent successivement.
-  \imgth[.4]{tree-training-modes}
+  \imgth{tree-training-modes}{.4}
 \end{frame}
 
 \begin{frame}
