--- a/shared/latex/supervised/hmm.tex
+++ b/shared/latex/supervised/hmm.tex
@@ -3,7 +3,7 @@
 
   Par exemple : diagnostic, capteur bruité, bourse, achats clients
 
-  \imgth[0.7]{markov/hmm}
+  \imgth{markov/hmm}{0.7}
 \end{frame}
 
 \begin{frame}{Définition}
