--- a/shared/latex/supervised/modeles-graphiques.tex
+++ b/shared/latex/supervised/modeles-graphiques.tex
@@ -5,5 +5,5 @@
   \item Noeuds $\Leftrightarrow$ Variables
   \item Arcs $\Leftrightarrow$ Probabilités conditionnelles
   \end{itemize}
-  \imgth[0.5]{graph-oriented}
+  \imgth{graph-oriented}{0.5}
 \end{frame}
