--- a/shared/latex/supervised/random-forest.tex
+++ b/shared/latex/supervised/random-forest.tex
@@ -41,7 +41,7 @@
 
 \begin{frame}
   \frametitle{Random Forest}
-  \imgtw[1.05]{random-forest-full}
+  \imgtw{random-forest-full}{1.05}
 \end{frame}
 
 \begin{frame}
