--- a/shared/latex/supervised/svm.tex
+++ b/shared/latex/supervised/svm.tex
@@ -1,41 +1,41 @@
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw[0.8]{separable-problem-linear}
+  \imgtw{separable-problem-linear}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw[0.8]{separable-problem-linear-solution}
+  \imgtw{separable-problem-linear-solution}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw[0.8]{separable-problem-linear-solution-bad}
+  \imgtw{separable-problem-linear-solution-bad}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw[0.8]{separable-problem-linear-svm}
+  \imgtw{separable-problem-linear-svm}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw[0.9]{svm-schema}
+  \imgtw{svm-schema}{0.9}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw[0.8]{separable-problem-nonlinear}
+  \imgtw{separable-problem-nonlinear}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw[0.8]{separable-problem-nonlinear-solution}
+  \imgtw{separable-problem-nonlinear-solution}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw[0.9]{separable-problem-nonlinear-kernelsvm}
+  \imgtw{separable-problem-nonlinear-kernelsvm}{0.9}
 \end{frame}
 
 \begin{frame}
