--- a/shared/latex/tf-keras/keras.tex
+++ b/shared/latex/tf-keras/keras.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Introduction}
   Keras est une API de haut niveau qui permet de prototyper des réseaux de neurones de toutes sortes.
 
-  \imgtw[0.5]{keras-tensorflow-logo}
+  \imgtw{keras-tensorflow-logo}{0.5}
 \end{frame}
 
 \begin{frame}{Avantages --- Facile d'utilisation}
