--- a/shared/latex/tools/anaconda.tex
+++ b/shared/latex/tools/anaconda.tex
@@ -2,7 +2,7 @@
   \frametitle{Présentation}
   Distribution Python faite pour la \og{}Data Science\fg{}
 
-  \imgtw[0.7]{anaconda_logo}
+  \imgtw{anaconda_logo}{0.7}
 \end{frame}
 
 \begin{frame}
