--- a/shared/latex/tools/cloud-computing.tex
+++ b/shared/latex/tools/cloud-computing.tex
@@ -1,15 +1,15 @@
 \begin{frame}
   \frametitle{Cloud Computing}
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw[0.4]{aws-logo}
+    \imgtw{aws-logo}{0.4}
     \small{$\;$} \\
-    \imgtw[0.7]{gcloud-logo}
+    \imgtw{gcloud-logo}{0.7}
     \small{$\;$} \\
-    \imgtw[0.4]{ibm-logo}
+    \imgtw{ibm-logo}{0.4}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw[0.5]{azure-logo}
-    \imgtw[0.5]{ovh-logo}
-    \imgtw[0.5]{citrix-logo}
+    \imgtw{azure-logo}{0.5}
+    \imgtw{ovh-logo}{0.5}
+    \imgtw{citrix-logo}{0.5}
   \end{minipage}\hfill
 \end{frame}
