--- a/shared/latex/tools/hadoop.tex
+++ b/shared/latex/tools/hadoop.tex
@@ -3,5 +3,5 @@
   Framework libre et open source d'applications distribuées ``scalables'' \\
   Une partie stockage : HDFS \\
   Une partie traitements : MapReduce
-  \imgtw[0.5]{hadoop-logo}
+  \imgtw{hadoop-logo}{0.5}
 \end{frame}
