--- a/shared/latex/tools/notebooks.tex
+++ b/shared/latex/tools/notebooks.tex
@@ -4,7 +4,7 @@
 
   Plus de 40 langages de programmation supportés, dont Python.
 
-  \imgth[0.5]{jupyter_logo}
+  \imgth{jupyter_logo}{0.5}
 \end{frame}
 
 \begin{frame}
