--- a/shared/latex/unsupervised/algorithme-em.tex
+++ b/shared/latex/unsupervised/algorithme-em.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Expectation-Maximisation}
-  \imgtw[0.9]{clustering}
+  \imgtw{clustering}{0.9}
 \end{frame}
 
 \begin{frame}
