--- a/shared/latex/unsupervised/anomaly-detection-light.tex
+++ b/shared/latex/unsupervised/anomaly-detection-light.tex
@@ -18,7 +18,7 @@
 
 \begin{frame}
   \frametitle{Modes de détection d'anomalie}
-  \imgtw[.8]{anomaly-modes}
+  \imgtw{anomaly-modes}{.8}
 \end{frame}
 
 \begin{frame}
@@ -48,7 +48,7 @@
 
 \begin{frame}
   \frametitle{Détection d'Anomalies}
-  \imgtw[1.0]{voronoi-airports}
+  \imgtw{voronoi-airports}{1.0}
 \end{frame}
 
 \begin{frame}
@@ -65,7 +65,7 @@
       \end{itemize}
     \end{column}
     \begin{column}{.3\tw}
-      \imgtw{lof-density}
+      \imgtw{lof-density}{1}
     \end{column}
   \end{columns}
   \onslide<+->{→ Anomalie si le ratio moyen d'atteignabilité est
@@ -74,7 +74,7 @@
 
 \begin{frame}
   \frametitle{Local Outlier Factor}
-  \imgtw[.7]{lof}
+  \imgtw{lof}{.7}
 \end{frame}
 
 \begin{frame}
@@ -99,6 +99,6 @@
 
 \begin{frame}
   \frametitle{Isolation forest}
-  \imgtw[.9]{isolation-forest}
+  \imgtw{isolation-forest}{.9}
 \end{frame}
 
