--- a/shared/latex/unsupervised/dbscan.tex
+++ b/shared/latex/unsupervised/dbscan.tex
@@ -24,37 +24,37 @@
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw[0.9]{dbscan-1}
+  \imgtw{dbscan-1}{0.9}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw[0.9]{dbscan-2}
+  \imgtw{dbscan-2}{0.9}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw[0.9]{dbscan-3}
+  \imgtw{dbscan-3}{0.9}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw[0.9]{dbscan-4}
+  \imgtw{dbscan-4}{0.9}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw[0.9]{dbscan-5}
+  \imgtw{dbscan-5}{0.9}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw[0.9]{dbscan-6}
+  \imgtw{dbscan-6}{0.9}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw[0.9]{dbscan-7}
+  \imgtw{dbscan-7}{0.9}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw[0.9]{dbscan-8}
+  \imgtw{dbscan-8}{0.9}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw[0.9]{dbscan-9}
+  \imgtw{dbscan-9}{0.9}
 \end{frame}
