--- a/shared/latex/unsupervised/introduction.tex
+++ b/shared/latex/unsupervised/introduction.tex
@@ -2,22 +2,22 @@
   Détection de variables cachées, de \og{}structures\fg{} cachées (clusters, variété topologique (manifold), …)
 
   \begin{minipage}[l]{0.69\linewidth}
-    \imgtw[0.9]{clustering}
+    \imgtw{clustering}{0.9}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.29\linewidth}
-    \imgtw[0.9]{globe-libre}
+    \imgtw{globe-libre}{0.9}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}{Réduction de Dimensionnalité}
-  \imgth[0.8]{pca-nuage}
+  \imgth{pca-nuage}{0.8}
 \end{frame}
 
 \begin{frame}{Clustering}
   Par exemple~: Création de segments de clientèle
-  \imgtw[0.5]{clustering-clients-2}
+  \imgtw{clustering-clients-2}{0.5}
 \end{frame}
 
 \begin{frame}{Détection d'anomalie}
-  \imgtw[0.9]{outlier-fish}
+  \imgtw{outlier-fish}{0.9}
 \end{frame}
