--- a/shared/latex/unsupervised/kmeans-gaussian.tex
+++ b/shared/latex/unsupervised/kmeans-gaussian.tex
@@ -1,6 +1,6 @@
 \begin{frame}{K-Means --- Introduction}
   Algorithme EM
-  \imgth[0.8]{cluster-2}
+  \imgth{cluster-2}{0.8}
 \end{frame}
 
 \begin{frame}{K-Means --- Algorithme}
@@ -22,7 +22,7 @@
 \begin{frame}
   \frametitle{K-Means --- Distance}
   distance euclidienne, Manhattan, Chebychev
-  \imgtw[0.9]{distances-euclidienne-manahattan-chebychev}
+  \imgtw{distances-euclidienne-manahattan-chebychev}{0.9}
 \end{frame}
 
 \begin{frame}{K-Means++}
@@ -43,7 +43,7 @@
 \begin{frame}
   \frametitle{Gaussian Mixture Model --- Introduction}
   Les clusters sont représentés par un centre et une matrice de covariance.
-  \imgtw[0.7]{gaussian-mixture}
+  \imgtw{gaussian-mixture}{0.7}
 \end{frame}
 
 \begin{frame}
