--- a/shared/latex/unsupervised/pca-classification-hierarchique-composantes-principales.tex
+++ b/shared/latex/unsupervised/pca-classification-hierarchique-composantes-principales.tex
@@ -1,11 +1,11 @@
 \begin{frame}{Classification Hiérarchique sur Composantes Principales}
   Réduction de dimension par PCA, puis clustering hiérarchique.
 
-  \imgth[0.7]{hybrid-pca-hierarchical}
+  \imgth{hybrid-pca-hierarchical}{0.7}
 \end{frame}
 
 \begin{frame}{Exemple}
-  \imgth[0.55]{chcp-us-crime-data}
+  \imgth{chcp-us-crime-data}{0.55}
 
   Obtenus à partir de données relatives aux crimes aux États-Unis.
 
