--- a/shared/latex/unsupervised/pca-lda.tex
+++ b/shared/latex/unsupervised/pca-lda.tex
@@ -16,11 +16,11 @@
 \end{frame}
 
 \begin{frame}{PCA --- Exemple 1}
-  \imgth[0.9]{pca-nuage}
+  \imgth{pca-nuage}{0.9}
 \end{frame}
 
 \begin{frame}{PCA --- Exemple 2}
-  \imgtw[0.9]{pca-fish}
+  \imgtw{pca-fish}{0.9}
 \end{frame}
 
 \begin{frame}{PCA --- Point de départ}
@@ -74,9 +74,9 @@
   Maximisation de la variance inter-classes.
 
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw[0.8]{pca-nuage}
+    \imgtw{pca-nuage}{0.8}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw[1.0]{lda}
+    \imgtw{lda}{1.0}
   \end{minipage}\hfill
 \end{frame}
