--- a/shared/latex/intelligence-artificielle/intro.tex
+++ b/shared/latex/intelligence-artificielle/intro.tex
@@ -7,7 +7,7 @@
 
 \begin{frame}
   \frametitle{Préambule à l'intelligence artificielle}
-  \imgtwl[0.2]{larousse}
+  \imgtwl{larousse}{0.2}
   \underline{\textbf{Intelligence}} :
   \begin{itemize}
   \item Ensemble des fonctions mentales ayant pour objet la connaissance conceptuelle et rationnelle
@@ -35,7 +35,7 @@
 
 \begin{frame}
   \frametitle{Préambule à l'intelligence artificielle}
-  \imgth[0.6]{memoire-fun}
+  \imgth{memoire-fun}{0.6}
 \end{frame}
 
 \begin{frame}
@@ -54,7 +54,7 @@
 
 \begin{frame}
   \frametitle{Préambule à l'intelligence artificielle}
-  \imgth[0.6]{conceptualisation}
+  \imgth{conceptualisation}{0.6}
 \end{frame}
 
 \begin{frame}
@@ -73,7 +73,7 @@
 
 \begin{frame}
   \frametitle{Préambule à l'intelligence artificielle}
-  \imgtw[0.8]{foot-keeper-penalty}
+  \imgtw{foot-keeper-penalty}{0.8}
 \end{frame}
 
 \begin{frame}
