--- a/shared/latex/machine-learning/apprentissage.tex
+++ b/shared/latex/machine-learning/apprentissage.tex
@@ -1,13 +1,13 @@
 \begin{frame}
   \frametitle{Qualité de l'apprentissage}
   Entrainement supervisé d'un modèle — overfit
-  \imgtw{fit}
+  \imgtw{fit}{1}
   \red{Problème : trop minimiser la perte n'est pas bon !}
 \end{frame}
 
 \begin{frame}
   \frametitle{Qualité de l'apprentissage}
-  \imgtw[.6]{learning-curve}
+  \imgtw{learning-curve}{.6}
   → Minimiser la perte sur un ensemble de validation
 \end{frame}
 
@@ -25,7 +25,7 @@
   \frametitle{Cross-validation}
   Pour \og perdre\fg{} moins de données et mieux tester la
   généralisation :
-  \imgtw[.9]{cv}
+  \imgtw{cv}{.9}
   Ici, 4-fold cross-validation.
 \end{frame}
 
