--- a/shared/latex/machine-learning/math-stats.tex
+++ b/shared/latex/machine-learning/math-stats.tex
@@ -9,7 +9,7 @@
 
 \begin{frame}
   \frametitle{Types de variables}
-  \imgtw{variables}
+  \imgtw{variables}{1}
 \end{frame}
 
 \begin{frame}
@@ -54,7 +54,7 @@
 
   Pour les lois normales :
 
-  \imgth[.7]{68-95-99,7}
+  \imgth{68-95-99,7}{.7}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -71,7 +71,7 @@
 \begin{frame}[fragile]
   \frametitle{Boxplot}
 
-  \imgth[.9]{boxplot}
+  \imgth{boxplot}{.9}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -118,7 +118,7 @@
 \begin{frame}
   \frametitle{Asymétrie}
 
-  \imgtw{skew}
+  \imgtw{skew}{1}
 
   \[
     \asym(X) = \mathbb{E} \left[\left(\frac{X - \bar{X}}{\sigma}\right)^3\right]
@@ -128,7 +128,7 @@
 \begin{frame}
   \frametitle{Kurtosis}
 
-  \imgth[.5]{kurtosis}
+  \imgth{kurtosis}{.5}
 
   \[
     \kurt(X) = \mathbb{E} \left[\left(\frac{X - \mu}{\sigma}\right)^4\right]
