--- a/shared/latex/natural-language-processing/usages-nlp.tex
+++ b/shared/latex/natural-language-processing/usages-nlp.tex
@@ -1,43 +1,43 @@
 
 \begin{frame}{Cas d'usage --- Transcription et synthèse de la parole}
-  \imgtw[0.6]{smart-assistants}
+  \imgtw{smart-assistants}{0.6}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Identification du locuteur}
-  \imgtw[0.6]{id-locuteur}
+  \imgtw{id-locuteur}{0.6}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Chatbot}
-  \imgtw[0.6]{zo}
+  \imgtw{zo}{0.6}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Moteur de recherche}
-  \imgtw[0.6]{deep-moteur-recherche}
+  \imgtw{deep-moteur-recherche}{0.6}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Extraction de données}
-  \imgtw[0.6]{information-extraction}
+  \imgtw{information-extraction}{0.6}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Analyse de sentiments}
-  \imgtw[0.6]{sentiment-analysis}
+  \imgtw{sentiment-analysis}{0.6}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Résumé}
-  \imgtw[0.8]{auto-summary}
+  \imgtw{auto-summary}{0.8}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Traduction}
   \begin{center}
-    \imgtw[1.1]{traduction-fr-en-short}
+    \imgtw{traduction-fr-en-short}{1.1}
   \end{center}
 \end{frame}
 
 \begin{frame}{État de l'art --- Vers 2015}
-  \imgtw[1]{nlp-tech-resume}
+  \imgtw{nlp-tech-resume}{1}
 \end{frame}
 
 \begin{frame}{État de l'art --- 2019}
-  \imgtw[1]{nlp-tech-resume-2019}
+  \imgtw{nlp-tech-resume-2019}{1}
 \end{frame}
 
