--- a/shared/latex/neural-networks/cnn-model.tex
+++ b/shared/latex/neural-networks/cnn-model.tex
@@ -1,24 +1,24 @@
 \begin{frame}{Prérequis --- Opérateur de convolution}
-  \imgtw[0.8]{convolution}
+  \imgtw{convolution}{0.8}
 \end{frame}
 
 \begin{frame}{Prérequis --- Opérateur de pooling}
-  \imgtw[0.8]{pooling}
+  \imgtw{pooling}{0.8}
 \end{frame}
 
 \begin{frame}{Schéma général}
   Réseau de neurones de convolutions (CNN)
-  \imgtw{cnn-schema}
+  \imgtw{cnn-schema}{1}
   «~Quelques~» millions de paramètres dans le modèle
 \end{frame}
 
 \begin{frame}{Entraînement}
-  \imgth[0.7]{gpu-fun}
+  \imgth{gpu-fun}{0.7}
 \end{frame}
 
 \begin{frame}{Architecture du cortex visuel}
   \begin{minipage}[l]{0.50\linewidth}
-    \imgtw[1.0]{visual-cortex}
+    \imgtw{visual-cortex}{1.0}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
     Connexion «~en série~» de couches
