--- a/shared/latex/neural-networks/deep-optimize.tex
+++ b/shared/latex/neural-networks/deep-optimize.tex
@@ -1,16 +1,16 @@
 \begin{frame}{Disparition du gradient (ou son explosion)}
-  \imgtw[1.0]{vanishing-gradient3}
+  \imgtw{vanishing-gradient3}{1.0}
 \end{frame}
 
 \begin{frame}{Disparition des gradients}
   Vanishing Gradient $\Rightarrow$ utilisation de ReLu plutôt que les sigmoïdes
   \vfill
-  \imgtw{activations/relu}
+  \imgtw{activations/relu}{1}
 \end{frame}
 
 \begin{frame}{Explosion des gradients}
   Exploding Gradient $\Rightarrow$ Gradient clipping
-  \imgtw[0.9]{gradient-clipping}
+  \imgtw{gradient-clipping}{0.9}
   Dans le cadre des réseaux réccurents $\Rightarrow$ initialisation avec des matrices orthogonales
 \end{frame}
 
