--- a/shared/latex/neural-networks/gan-intro.tex
+++ b/shared/latex/neural-networks/gan-intro.tex
@@ -1,13 +1,13 @@
 \begin{frame}{Que voyez-vous ?}
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw[1.0]{gan-horse-zebra}
+    \imgtw{gan-horse-zebra}{1.0}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw[1.0]{gan-zebra-horse}
+    \imgtw{gan-zebra-horse}{1.0}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}{Que voyez-vous ?}
-  \imgth[0.8]{gan-faux-visages}
+  \imgth{gan-faux-visages}{0.8}
 \end{frame}
 
