--- a/shared/latex/neural-networks/gradient-descent.tex
+++ b/shared/latex/neural-networks/gradient-descent.tex
@@ -9,7 +9,7 @@
   w_i' = w_i - \gamma * grad 
   \]
   où : $0 < \gamma < 1$ (learning rate)
-  \imgtw[0.6]{gradient}
+  \imgtw{gradient}{0.6}
 \end{frame}
 
 \begin{frame}{Algorithme}
@@ -63,7 +63,7 @@
     \item a = 0.58 ($\hat{a} = 3.0$)
     \item b = 0.25 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-1}
+  \imgth{regression-1}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -71,7 +71,7 @@
     \item a = 0.58 ($\hat{a} = 3.0$)
     \item b = 0.25 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-error}
+  \imgth{regression-error}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -79,7 +79,7 @@
     \item a = 1.50 ($\hat{a} = 3.0$)
     \item b = 0.35 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-2}
+  \imgth{regression-2}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -87,7 +87,7 @@
     \item a = 2.10 ($\hat{a} = 3.0$)
     \item b = 0.40 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-3}
+  \imgth{regression-3}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -95,7 +95,7 @@
     \item a = 2.48 ($\hat{a} = 3.0$)
     \item b = 0.43 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-4}
+  \imgth{regression-4}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -103,7 +103,7 @@
     \item a = 2.73 ($\hat{a} = 3.0$)
     \item b = 0.46 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-5}
+  \imgth{regression-5}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -111,7 +111,7 @@
     \item a = 2.89 ($\hat{a} = 3.0$)
     \item b = 0.47 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-6}
+  \imgth{regression-6}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -119,7 +119,7 @@
     \item a = 2.99 ($\hat{a} = 3.0$)
     \item b = 0.48 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-7}
+  \imgth{regression-7}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -127,7 +127,7 @@
     \item a = 3.06 ($\hat{a} = 3.0$)
     \item b = 0.49 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-8}
+  \imgth{regression-8}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -135,7 +135,7 @@
     \item a = 3.10 ($\hat{a} = 3.0$)
     \item b = 0.49 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-9}
+  \imgth{regression-9}{0.6}
 \end{frame}
 
 \begin{frame}{Exemple}
@@ -143,5 +143,5 @@
     \item a = 3.13 ($\hat{a} = 3.0$)
     \item b = 0.50 ($\hat{b} = 0.5$)
   \end{itemize}
-  \imgth[0.6]{regression-10}
+  \imgth{regression-10}{0.6}
 \end{frame}
