--- a/shared/latex/neural-networks/lstm.tex
+++ b/shared/latex/neural-networks/lstm.tex
@@ -8,11 +8,11 @@
 \end{frame}
 
 \begin{frame}{Vanishing gradient résolu (ou presque)}
-  \imgtw{vanishing-gradient-lstm}
+  \imgtw{vanishing-gradient-lstm}{1}
 \end{frame}
 
 \begin{frame}{Détails théoriques}
-  \imgtw[0.7]{lstm-schema}
+  \imgtw{lstm-schema}{0.7}
   \begin{description}
   \item[Forget gate] $F_t = \sigma(W_F \times x_t + U_F \times h_{t - 1} + b_F)$ 
   \item[Input gate] $I_t = \sigma(W_I \times x_t + U_I \times h_{t - 1} + b_I)$
