--- a/shared/latex/neural-networks/rnn-variants.tex
+++ b/shared/latex/neural-networks/rnn-variants.tex
@@ -8,7 +8,7 @@
 \end{frame}
 
 \begin{frame}{Gated Recurrent Unit --- Détails théoriques}
-  \imgtw[0.8]{gru}
+  \imgtw{gru}{0.8}
   \begin{description}[<+->]
     \item[Update gate] $z_t = \sigma (W_z \times x_t + U_z \times h_{t - 1} + b_z)$
     \item[Reset gate] $r_t = \sigma (W_r \times x_t + U_r \times h_{t - 1} + b_r)$
@@ -17,7 +17,7 @@
 \end{frame}
 
 \begin{frame}{Réseaux récurrents bi-directionnels}
-  \imgtw[0.8]{bidirectional-rnn}
+  \imgtw{bidirectional-rnn}{0.8}
   \begin{itemize}[<+->]
     \item Permet d'apprendre sur des séquences plus longues
     \item Permet de modéliser des dépendances droite-gauche
@@ -34,5 +34,5 @@
 \end{frame}
 
 \fmg{\begin{frame}{D'autres variantes}
-  \imgtw{spaghetti}
+  \imgtw{spaghetti}{1}
 \end{frame}}
