--- a/shared/latex/neural-networks/rnn.tex
+++ b/shared/latex/neural-networks/rnn.tex
@@ -9,11 +9,11 @@
 \end{frame}
 
 \fmg{\begin{frame}{Différence avec un réseau feedforward}
-  \imgtw[0.7]{nn-rnn-comparaison}
+  \imgtw{nn-rnn-comparaison}{0.7}
 \end{frame}}
 
 \begin{frame}{Modèle}
-  \imgtw[0.7]{rnn-unfold}
+  \imgtw{rnn-unfold}{0.7}
   $h_{t}=\sigma_{h}(Ux_{t}+Vh_{t-1}+b_{h})$ \\
   $o_{t}=\sigma_{o}(Wh_{t}+b_{o})$ \\
   \begin{itemize}
@@ -30,18 +30,18 @@
 
   \begin{figure}
     \centering
-    \imgth[0.7]{rnns/lastoutput}
+    \imgth{rnns/lastoutput}{0.7}
   \end{figure}
 \end{frame}
 
 \begin{frame}{Prédiction d'autants de sorties qu'il y a d'entrées}
-  \imgtw[0.5]{rnns/alloutputs}
+  \imgtw{rnns/alloutputs}{0.5}
 \end{frame}
 
 \begin{frame}{Prédiction d'un nombre arbitraire de sorties}
-  \imgtw{rnns/seq2seq}
+  \imgtw{rnns/seq2seq}{1}
 \end{frame}
 
 \begin{frame}{Problème du gradient qui disparaît (vanishing gradient)}
-  \imgtw{vanishing-gradient-rnn}
+  \imgtw{vanishing-gradient-rnn}{1}
 \end{frame}
