--- a/shared/latex/reinforcement-learning/intro.tex
+++ b/shared/latex/reinforcement-learning/intro.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Définition}
-  \imgtw[0.5]{rl}
+  \imgtw{rl}{0.5}
   où :
   \newline
   $S_t$ est l'état de l'environnement,
@@ -18,14 +18,14 @@
 
 \begin{frame}{Contraintes techniques \& théoriques --- Bourse}
     \red{Environnement modélisable ? Récompense calculable ?}
-  \imgth[0.6]{bourse-ny}
+  \imgth{bourse-ny}{0.6}
 \end{frame}
 
 \begin{frame}{Contraintes techniques \& théoriques --- Échecs}
   \begin{center}
     \red{Environnement modélisable ? Récompense calculable ?}
   \end{center}
-  \imgth[0.5]{echec}
+  \imgth{echec}{0.5}
   \pause
   \begin{center}
     $\approx 10^{120}$ parties possibles $\ggg 6 x 10^{85}$
@@ -35,7 +35,7 @@
 \end{frame}
 
 \begin{frame}{Contraintes techniques \& théoriques --- Go}
-  \imgth[0.6]{go}
+  \imgth{go}{0.6}
   \begin{center}
     \huge{$\approx 10^{600}$}
   \end{center}
@@ -50,6 +50,6 @@
 \end{frame}
 
 \begin{frame}{Plannification --- Voyageur de commerce}
-  \imgth[0.6]{voyageur-commerce}
+  \imgth{voyageur-commerce}{0.6}
 \end{frame}
 
