--- a/shared/latex/sectors/coding.tex
+++ b/shared/latex/sectors/coding.tex
@@ -1,13 +1,13 @@
 \begin{frame}
   \frametitle{Informatique et Machine Learning}
   La mutation du secteur informatique par l'intelligence artificielle
-  \imgtw[0.8]{it-ai}
+  \imgtw{it-ai}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Informatique et Machine Learning}
   DeepMind réduit de 40\% la consommation des datacenter Google
-  \imgtw[0.8]{deepmind-energy-consumption}
+  \imgtw{deepmind-energy-consumption}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -15,7 +15,7 @@
   2018 était l'année du Machine Learning en cybersécurité (Mc Afee)
   \newline
   Outils ML en cybersécurité : 10\% à 60\% en 2020 (Gartner)
-  \imgtw[0.8]{Machine-Learning-Cybersécurité}
+  \imgtw{Machine-Learning-Cybersécurité}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -24,10 +24,10 @@
   \newline
   \newline
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[0.8]{cylance}
+    \imgtw{cylance}{0.8}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[0.8]{deepinstinct-2}
+    \imgtw{deepinstinct-2}{0.8}
   \end{minipage}\hfill
 \end{frame}
 
@@ -39,17 +39,17 @@
   \newline
   \newline
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[0.8]{windows-defender}
+    \imgtw{windows-defender}{0.8}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[0.8]{bad-rabbit}
+    \imgtw{bad-rabbit}{0.8}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}
   \frametitle{Informatique et Machine Learning}
   Visual Studio IntelliCode (C\#, C++, XAML, Java, Javascript, Python)
-  \imgtw[0.8]{vs-intellicode-2}
+  \imgtw{vs-intellicode-2}{0.8}
 \end{frame}
 
 \begin{frame}
