--- a/shared/latex/sectors/transport.tex
+++ b/shared/latex/sectors/transport.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{La voiture autonome}
-  \imgtw[0.8]{voiture-autonome-conducteur}
+  \imgtw{voiture-autonome-conducteur}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -10,7 +10,7 @@
     \newline
     Inconvéniants : Hétérogénéité de l'environnement
   \end{center}
-  \imgtw[1]{voiture-autonome-navya}
+  \imgtw{voiture-autonome-navya}{1}
 \end{frame}
 
 \begin{frame}
@@ -27,7 +27,7 @@
 
 \begin{frame}
   \frametitle{La voiture autonome}
-  \imgtw[0.8]{voiture-autonome}
+  \imgtw{voiture-autonome}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -39,7 +39,7 @@
   Aucun gagnant !
   \newline
   5/23 arrivent au bout en 2005
-  \imgtw[0.6]{darpa-grand-challenge}
+  \imgtw{darpa-grand-challenge}{0.6}
 \end{frame}
 
 \begin{frame}
@@ -49,7 +49,7 @@
   60 miles en milieu urbain + respect du code de la route (sans gps)
   \newline
   6/35 franchissent la ligne d'arrivée
-  \imgtw[0.8]{darpa-urban-challenge}
+  \imgtw{darpa-urban-challenge}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -57,7 +57,7 @@
   Google Car (2010)
   \newline
   Projet visant une voiture autonome de niveau 5
-  \imgtw[0.8]{google-car}
+  \imgtw{google-car}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -66,13 +66,13 @@
   \newline
   Uniquement avec caméra, pas de LIDAR
   \newline
-  \imgtw[0.6]{tesla-autopilot}
+  \imgtw{tesla-autopilot}{0.6}
 \end{frame}
 
 \begin{frame}
   \frametitle{La voiture autonome}
   Waymo One déployé à Phenix (5 décembre 2018)
-  \imgtw[0.8]{waymo-one}
+  \imgtw{waymo-one}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -82,17 +82,17 @@
   Au 7 mai 2016 -2ème accident- Autopilot avait parcourus 210 Millions de kilomètres
   \newline
   1 seul (Uber) ou le pilote automatique est mis en cause
-  \imgtw[0.7]{uber-crash-velo}
+  \imgtw{uber-crash-velo}{0.7}
 \end{frame}
 
 \begin{frame}
   \frametitle{La voiture autonome}
-  \imgtw[1]{voiture-autonome-acteurs}
+  \imgtw{voiture-autonome-acteurs}{1}
 \end{frame}
 
 \begin{frame}
   \frametitle{La voiture autonome}
-  \imgtw[1]{voiture-autonome-changements}
+  \imgtw{voiture-autonome-changements}{1}
 \end{frame}
 
 \begin{frame}
@@ -106,7 +106,7 @@
 
 \begin{frame}
   \frametitle{Le monde du rail}
-  \imgtw[0.8]{train-aiguillage}
+  \imgtw{train-aiguillage}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -117,7 +117,7 @@
   \item Maintenance préventive par classification d'images (rails, caténaires, isolateurs, materiel roulant, végétation ...)
   \item Relation client
   \end{itemize}
-  \imgtw[0.8]{rail-detect-defauts}
+  \imgtw{rail-detect-defauts}{0.8}
 \end{frame}
 
 \begin{frame}
@@ -135,7 +135,7 @@
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw[0.8]{avion-intelligent}
+    \imgtw{avion-intelligent}{0.8}
   \end{minipage}\hfill
 \end{frame}
 
