--- a/shared/latex/supervised/classification.tex
+++ b/shared/latex/supervised/classification.tex
@@ -1,16 +1,16 @@
 \begin{frame}
   \frametitle{Classification}
-  \imgtw[0.8]{variables}
+  \imgtw{variables}{0.8}
 \end{frame}
 
 \begin{frame}
   \frametitle{Classification}
-  \imgtw[0.65]{mnist}
+  \imgtw{mnist}{0.65}
 \end{frame}
 
 \begin{frame}
   \frametitle{Classification}
-  \imgtw[0.8]{caltech256}
+  \imgtw{caltech256}{0.8}
 \end{frame}
 
 \begin{frame}
