--- a/shared/latex/supervised/cost-error-function.tex
+++ b/shared/latex/supervised/cost-error-function.tex
@@ -12,7 +12,7 @@
   \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.59\linewidth}
-  \imgth[0.7]{regression-error}
+  \imgth{regression-error}{0.7}
   \end{minipage}\hfill
 \end{frame}
 
@@ -21,7 +21,7 @@
   \begin{minipage}[l]{0.49\linewidth}
   \begin{center}
     $y = a.x+b$
-    \imgtw[0.6]{regression-line-1}
+    \imgtw{regression-line-1}{0.6}
   \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
