--- a/shared/latex/supervised/markov-model.tex
+++ b/shared/latex/supervised/markov-model.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Markov Model}
-  \imgth[0.8]{markov/simple}
+  \imgth{markov/simple}{0.8}
 \end{frame}
 
 
@@ -44,7 +44,7 @@
   \item Prédiction de classe : un modèle par classe
   \item Découverte de pattern
   \end{itemize}
-  \imgth[0.6]{markov/simple}
+  \imgth{markov/simple}{0.6}
 \end{frame}
 
 \begin{frame}
@@ -55,5 +55,5 @@
   \item Thermodynamique
   \item Théorie des files d'attente (télécommunication)
   \end{itemize}
-  \imgth[0.6]{markov/simple}
+  \imgth{markov/simple}{0.6}
 \end{frame}
