--- a/shared/latex/supervised/regression-polynomiale.tex
+++ b/shared/latex/supervised/regression-polynomiale.tex
@@ -2,8 +2,8 @@
 \begin{frame}
   \frametitle{Regression Polynomiale}
   Limites de la regression linéaire
-  \imgtw[1]{residuals-2}
-  \imgth[0.4]{residuals-1}
+  \imgtw{residuals-2}{1}
+  \imgth{residuals-1}{0.4}
 \end{frame}
 
 \begin{frame}
@@ -11,7 +11,7 @@
   $Y=a_0+a_1*X+a_2*X^2+a_3*X^3+...+a_n*X^n$ \\
   \newline
   $Y=\underset{k \in [0..n]}{\sum}{a_k*X^k}$
-  \imgth[0.6]{regression-polynomiale-exemple}
+  \imgth{regression-polynomiale-exemple}{0.6}
 \end{frame}
 
 \begin{frame}
