--- a/shared/latex/supervised/sequential-data.tex
+++ b/shared/latex/supervised/sequential-data.tex
@@ -42,11 +42,11 @@
 \end{frame}
 
 \begin{frame}{Types de données séquentielles --- son}
-  \imgth[0.7]{fourier}  
+  \imgth{fourier}{0.7}  
 \end{frame}
 
 \begin{frame}{Types de données séquentielles --- vidéo}
-  \imgtw[0.7]{video-frames}
+  \imgtw{video-frames}{0.7}
 \end{frame}
 
 \begin{frame}{Types de données séquentielles --- et bien d'autres}
