--- a/shared/latex/supervised/statistical-approaches.tex
+++ b/shared/latex/supervised/statistical-approaches.tex
@@ -8,19 +8,19 @@
 \begin{frame}{Outils --- Chronogramme}
   Chronogramme : tracé de t $\rightarrow$ X(t) 
 
-  \imgtw[0.9]{time-serie-chronogramme}
+  \imgtw{time-serie-chronogramme}{0.9}
 \end{frame}
 
 \begin{frame}{Outils --- Lag plot}
   Tracé des points $X_{t - k}$ \& $X_t$ pour détecter les corrélations temporelles
 
   \begin{minipage}[l]{0.499\linewidth}
-    \imgtw[0.7]{lag-plot-linear}
-    \imgtw[0.7]{lag-plot-sinusoidal}
+    \imgtw{lag-plot-linear}{0.7}
+    \imgtw{lag-plot-sinusoidal}{0.7}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.499\linewidth}
-    \imgtw[0.6]{lag-plot-white-noise}
-    \imgtw[0.6]{lag-plot-uniform-noise}
+    \imgtw{lag-plot-white-noise}{0.6}
+    \imgtw{lag-plot-uniform-noise}{0.6}
   \end{minipage}\hfill
 \end{frame}
 
@@ -44,7 +44,7 @@
 \end{frame}
 
 \begin{frame}{Premières approches }
-  \imgth[0.9]{time-serie-decomposition}
+  \imgth{time-serie-decomposition}{0.9}
 \end{frame}
 
 \begin{frame}{ARMA --- Introduction}
@@ -59,7 +59,7 @@
 
 \begin{frame}{ARMA --- Introduction}
   Exemple de processus non-stationnaires :
-  \imgtw[0.9]{processus-non-stationnaires}
+  \imgtw{processus-non-stationnaires}{0.9}
 \end{frame}
 
 \begin{frame}{ARMA --- Composante autoregressive}
