--- a/shared/latex/tf-keras/tf.tex
+++ b/shared/latex/tf-keras/tf.tex
@@ -1,10 +1,10 @@
 \begin{frame}{Introduction}
-  \imgth[0.7]{tensorflow_logo}
+  \imgth{tensorflow_logo}{0.7}
 \end{frame}
 
 \begin{frame}{Structure de l'API}
   \centering
-  \imgtw{tf-api}
+  \imgtw{tf-api}{1}
 \end{frame}
 
 \begin{frame}{Deux styles}
@@ -71,7 +71,7 @@
     \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \imgth[0.9]{tensorflow}
+    \imgth{tensorflow}{0.9}
   \end{minipage}\hfill
 \end{frame}
 
