--- a/shared/latex/tools/github.tex
+++ b/shared/latex/tools/github.tex
@@ -1,5 +1,5 @@
 \begin{frame}
   \frametitle{Github}
   Sité d'hébergement et diffusion de code source.
-  \imgtw[0.5]{github_logo}
+  \imgtw{github_logo}{0.5}
 \end{frame}
