--- a/shared/latex/tools/python.tex
+++ b/shared/latex/tools/python.tex
@@ -5,7 +5,7 @@
   \item[2001] Passage en GPL
   \item[2009] Python 3
   \end{description}
-  \imgtw[0.8]{python_logo}
+  \imgtw{python_logo}{0.8}
 \end{frame}
 
 \begin{frame}{Caractéristiques}
