--- a/shared/latex/unsupervised/clustering-conclusion.tex
+++ b/shared/latex/unsupervised/clustering-conclusion.tex
@@ -1,7 +1,7 @@
 
 \begin{frame}
   \frametitle{Conclusion}
-   \imgtw[1.0]{clustering-methods-problems-illustration}
+   \imgtw{clustering-methods-problems-illustration}{1.0}
 \end{frame}
 
 \begin{frame}
@@ -13,5 +13,5 @@
     $\Rightarrow$ \\
     \red{Pas de solution unique !}
   \end{center}
-  \imgtw[0.9]{pareto}
+  \imgtw{pareto}{0.9}
 \end{frame}
