--- a/shared/latex/unsupervised/hierarchical-clustering.tex
+++ b/shared/latex/unsupervised/hierarchical-clustering.tex
@@ -19,7 +19,7 @@
 \end{frame}
 
 \begin{frame}{Clustering Hiérarchique --- Résultat}
-  \imgth[0.8]{dendogram}
+  \imgth{dendogram}{0.8}
 \end{frame}
 
 \begin{frame}{Clustering Hiérarchique --- Procédé}
